feat: add backup scripts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# create new pane on the same dir
+bind c new-window -c "#{pane_current_path}"
+
 # split panes using | and -
 bind \\ split-window -h
 bind - split-window -v
