--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,8 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript"]
+    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "yaml"],
+    "yaml.format.enable": true,
+    "yaml.schemas": {
+        "https://raw.githubusercontent.com/aanand/compose-file/master/schema/data/config_schema_v3.0.json": ["/*"]
+    }
 }
 
