feat: add sessionizer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set-option -g history-limit 10000
 
 set-option -g  default-terminal "xterm-256color" 
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+# forget the find window.  That is for chumps
+bind-key -r f run-shell "tmux neww ~/.config/tmux/tmux-sessionizer"
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
